fix navbar z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,10 +15,6 @@
   box-shadow: 0px 0px 0px 4px #606df4;
 }
 
-.slick-list {
-  overflow-x: visible !important;
-}
-
 .slick-list::-webkit-scrollbar {
   display: none;
 }
